--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "activedirectory": "^0.7.2",
+    "excel4node": "^1.7.2",
     "express": "^4.17.1",
     "forever": "^3.0.2",
     "json-server": "^0.16.3",
